<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XyTodo</string>
    <string name="app_slogan">Make life simple</string>

    <string name="about_open_source_license"><u>Open Source License</u></string>
    <string name="about_developer">Developer: Kulics Wu</string>
    <string name="about_version">Version: v 1.0.1</string>
    <string name="about_official_website">Official Website</string>

    <string name="note">Note</string>
    <string name="search_name">Search</string>
    <string name="all">All</string>
    <string name="name">Name</string>
    <string name="content">Content</string>
    <string name="fingerprint">Fingerprint</string>

    <string name="column_fingerprint">Fingerprint</string>
    <string name="column_fingerprint_sub">Set a master password to use fingerprint features</string>
    <string name="column_format_export">Format Export</string>
    <string name="column_format_export_sub">Use the format to export your decrypted origin data, you can import it on other compatible app.</string>
    <string name="column_format_import">Format Import</string>
    <string name="column_format_import_sub">Use the format data import origin data, you can import data from other compatible app.</string>

    <string name="action_set">Set to</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_set">Set</string>
    <string name="button_clear">Clear</string>
    <string name="button_reset">Reset</string>
    <string name="button_search">Search</string>
    <string name="button_save">Save</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_use">Use</string>
    <string name="button_copy">Copy</string>
    <string name="button_send">Send</string>
    <string name="button_restore">Restore</string>
    <string name="button_change">Change</string>
    <string name="button_color">Color</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>

    <string name="dialog_title_confirm">Confirm to save change</string>
    <string name="dialog_title_enter">Enter</string>
    <string name="dialog_title_filter">Search the category</string>
    <string name="dialog_title_clear_data">Confirm to clear data</string>

    <string name="tips_fingerprint">You need to use the Set button to save the master password on the local storage to use fingerprint features, prudent use in Root phone. Touch fingerprint on this page will display the master password.</string>
    <string name="tips_export">You can export this format data as a text.</string>
    <string name="tips_import">You just copy the format data to here then click on Import.</string>

    <string name="dialog_content_clear_data">You will lose all data.</string>

    <string name="err_name_none">The name can not be empty !</string>

    <string name="toast_copy">Has been copied to the clipboard~</string>
    <string name="toast_err_type">Data type error, please use the correct source data !</string>
    <string name="toast_success_restore">Restore success~</string>
    <string name="toast_success_auth">Auth succeeded</string>
    <string name="toast_err_auth">Auth failed</string>
    <string name="toast_quit">Click again to quit XyTodo</string>
    <string name="toast_fast_click">Do not click me so hard,Please!~ </string>

    <string name="activity_title_main">XyTodo</string>
    <string name="activity_title_search">Search</string>
    <string name="activity_title_about_app">About XyTodo</string>
    <string name="activity_title_about_license">Open Source License</string>
    <string name="activity_title_guide">Guide</string>
    <string name="activity_title_contact_us">Contact Us</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_category">Category</string>
    <string name="activity_title_fingerprint">Fingerprint</string>
    <string name="activity_title_format_export">Format Export</string>
    <string name="activity_title_format_import">Format Import</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_palette">Palette</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_about">About</string>
    <string name="menu_guide">Guide</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_more">More Info</string>
    <string name="menu_function">Function</string>


    <string name="bs_more">More</string>
    <string name="column_clear_data">Clear Data</string>
    <string name="column_clear_data_sub">Clear all data of the app</string>
    <string name="activity_title_task_add">Add Task</string>
    <string name="activity_title_task_edit">Edit Task</string>
    <string name="button_palette">Palette</string>
    <string name="dialog_title_palette">Set color</string>
    <string name="dialog_title_delete">Confirm to delete</string>
    <string name="dialog_content_delete">You will lose this task.</string>
    <string name="activity_title_note">Note</string>
    <string name="today">Today</string>
    <string name="todo">Todo</string>
    <string name="done">Done</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="custom">Custom</string>
    <string name="target">Target</string>
    <string name="about_website">https://kulicswu.wixsite.com/naxy</string>

</resources>
