<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/PURE_LIGHT_WHITE">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8" >

                <ImageView
                    android:id="@+id/about_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@mipmap/ic_launcher" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10dp">

                <TextView
                    android:id="@+id/about_appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/about_appName"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about_version"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/about_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/about_version"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about_developer"
                    android:textColor="#888271"
                    android:textSize="14sp"
                    android:typeface="monospace" />

                <TextView
                    android:id="@+id/about_official_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about_developer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/about_official_website"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="20dp">

                <!--<TextView-->
                    <!--android:id="@+id/about_license"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_marginBottom="8dp"-->
                    <!--android:text="@string/about_open_source_license"-->
                    <!--android:textColor="@android:color/holo_blue_dark"-->
                    <!--android:textSize="14sp" />-->

            </RelativeLayout>

        </LinearLayout>

</RelativeLayout>